add CSP nonce header

--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -6,11 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="CSP-NONCE" content="random-csp-nonce"/>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" nonce="random-csp-nonce" rel="stylesheet">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'nonce-random-csp-nonce'; img-src 'self' data:">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h1>Running in production, CSP nonce: random-csp-nonce</h1>
   <app-root></app-root>
 </body>
 </html>
